@@ -55,8 +55,7 @@ private:
   /// ORB pointer.
   CORBA::ORB_var orb_;
 
-  /// Keeping g++ 2.7.2 happy..
-  ACE_UNIMPLEMENTED_FUNC (void operator= (const Echo_i&))
+  void operator= (const Echo_i&);
 };
 
 #endif /* ECHO_I_H */
